[package]
name = "print_bot_2"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[dependencies]
image = "^0.23"
hyper = "0.10"
hyper-native-tls = "0.3.0"
anyhow = "1"
dither = "1.3"
escposify = "0.4"
libusb = "0.3"

#pos58_usb = { path = "../pos58_usb" }
[dependencies.pos58_usb]
git = "https://github.com/Masterchef365/pos58_usb.git"
rev = "1deb10b"

[dependencies.discord]
git = "https://github.com/SpaceManiac/discord-rs"
rev = "245f57317a2c2377fd27b63e9c623e3af10e169d"
features = []
